[package]
name = "polling_traits"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "derive", "extra-traits"]}
proc-macro2 = "1.0.19"
Inflector = "0.11"

[dev-dependencies]
tokio = {version = "0.2.22", features = ["rt-threaded", "macros"]}
